--- a/testpage.html
+++ b/testpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="/iiboReset.css"/>
+		<link rel="stylesheet" type="text/css" href="iiboReset.css"/>
 		<title>Lorem ipsum</title>
 	</head>
 		<h1>Header 1</h1>
