added more content

--- a/testpage.html
+++ b/testpage.html
@@ -4,6 +4,13 @@
 		<link rel="stylesheet" type="text/css" href="iiboReset.css"/>
 		<title>Lorem ipsum</title>
 	</head>
-		<h1>Header 1</h1>
-		<p>Paragraph.</p>
+		<header>
+			<h1>Header</h1>
+		</header>
+		<div>
+			<p>Paragraph</p>
+		</div>
+		<footer>
+			<p>&copy; 2014 Iiboharz</p>
+		</footer>
 </html>
