Added built-in CSS for the test page, reset more elements.

--- a/testpage.html
+++ b/testpage.html
@@ -3,14 +3,31 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="iiboReset.css"/>
 		<title>Lorem ipsum</title>
+		<style>
+			#head {
+				background: #f00;
+				width: 50%;
+				margin-right: auto; margin-left: auto;
+			}
+			#content {
+				background: #0f0;
+				width: 50%;
+				margin-right: auto; margin-left: auto;
+			}
+			#footer {
+				background: #00f;
+				width: 50%;
+				margin-right: auto; margin-left: auto;
+			}
+		</style>
 	</head>
-		<header>
+		<header id="head">
 			<h1>Header</h1>
 		</header>
-		<div>
+		<div id="content">
 			<p>Paragraph</p>
 		</div>
-		<footer>
+		<footer id="footer">
 			<p>&copy; 2014 Iiboharz</p>
 		</footer>
 </html>
