--- a/testpage.html
+++ b/testpage.html
@@ -6,6 +6,11 @@
 		<style>
 			#head {
 				background: #f00;
+				width: 100%;
+				margin-right: auto; margin-left: auto;
+			}
+			#head2 {
+				background: #ff0;
 				width: 50%;
 				margin-right: auto; margin-left: auto;
 			}
@@ -24,8 +29,21 @@
 		<header id="head">
 			<h1>Header</h1>
 		</header>
+		<header id="head2">
+			<h2>Header 2</h2>
+		</header>
 		<div id="content">
-			<p>Paragraph</p>
+			<p>Lorem ipsum dolor amet.</p>
+			<ol>
+				<li>Torin</li>
+				<li>wagn</li>
+				<li>mihaiul</li>
+			</ol>
+			<ul>
+				<li>Caffeine Spider</li>
+				<li>StudioARE</li>
+				<li>Explosive Multimedia</li>
+			</ul>
 		</div>
 		<footer id="footer">
 			<p>&copy; 2014 Iiboharz</p>
